# fftest

./: .gitignore  CMakeLists.txt
FFTest/: avio_reading.c  decode_video.c  main.cpp  open_video.h  simple_audio_player.cpp  simple_player.cpp  simplest_ffmpeg_picture_encoder.cpp  test_copy.cpp  test_copy.h
FFTest.xcodeproj/: project.pbxproj
FFTest.xcodeproj/project.xcworkspace/xcuserdata/archko.xcuserdatad/: UserInterfaceState.xcuserstate
